k8s/dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secumon
  labels:
    name: secumon
    env: dev
