k8s/dev/07-alerting.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secumon-alerting
  namespace: secumon
  labels:
    app: secumon-alerting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secumon-alerting
  template:
    metadata:
      labels:
        app: secumon-alerting
    spec:
      imagePullSecrets:
      - name: registry-secret
      containers:
      - name: alerting
        image: qq9o8vqe.c1.bhs5.container-registry.ovh.net/secuops/secumon-alerting:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: secumon-alerting
  namespace: secumon
  labels:
    app: secumon-alerting
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: secumon-alerting
